<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>metis-processor</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>metis-processor</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.maven.compiler.plugin>3.13.0</version.maven.compiler.plugin>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <version.spring.boot>3.4.0</version.spring.boot>
    <version.commons.lang3>3.12.0</version.commons.lang3>
    <version.metis-normalization>14-SNAPSHOT</version.metis-normalization>
    <version.corelib>2.16.10-SNAPSHOT</version.corelib>
    <!-- These two versions are interdependent. -->
    <version.slf4j>2.0.12</version.slf4j>
    <version.log4j>2.23.0</version.log4j>
    <version.junit>5.11.4</version.junit>
    <version.morphia>2.4.5</version.morphia>
    <version.mongodb>4.10.2</version.mongodb>
    <version.metis-common-utils>15-SNAPSHOT</version.metis-common-utils>
    <version.metis-common-mongo>15-SNAPSHOT</version.metis-common-mongo>
    <version.metis-core-service>15-SNAPSHOT</version.metis-core-service>
    <version.metis-indexing>15-SNAPSHOT</version.metis-indexing>
    <version.metis-mediaprocessing>15-SNAPSHOT</version.metis-mediaprocessing>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-log4j2</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>${version.log4j}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${version.commons.lang3}</version>
    </dependency>
    <dependency>
      <groupId>eu.europeana.metis</groupId>
      <artifactId>metis-common-utils</artifactId>
      <version>${version.metis-common-utils}</version>
    </dependency>
    <dependency>
      <groupId>eu.europeana.metis</groupId>
      <artifactId>metis-common-mongo</artifactId>
      <version>${version.metis-common-mongo}</version>
      <exclusions>
        <exclusion>
          <groupId>dev.morphia.morphia</groupId>
          <artifactId>morphia-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>dev.morphia.morphia</groupId>
      <artifactId>morphia-core</artifactId>
      <version>${version.morphia}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-core</artifactId>
      <version>${version.mongodb}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>bson</artifactId>
      <version>${version.mongodb}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>bson-record-codec</artifactId>
      <version>${version.mongodb}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>${version.mongodb}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-legacy</artifactId>
      <version>${version.mongodb}</version>
    </dependency>
    <dependency>
      <groupId>eu.europeana.metis</groupId>
      <artifactId>metis-core-service</artifactId>
      <version>${version.metis-core-service}</version>
    </dependency>
    <dependency>
      <groupId>eu.europeana.metis</groupId>
      <artifactId>metis-indexing</artifactId>
      <version>${version.metis-indexing}</version>
      <exclusions>
        <!--Exclude those because of eu.europeana.api:entity-api-client:jar:0.0.1-SNAPSHOT transitive of metis-enrichment-client-->
        <exclusion>
          <groupId>io.netty</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>eu.europeana.metis</groupId>
      <artifactId>metis-media-service</artifactId>
      <version>${version.metis-mediaprocessing}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${version.junit}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.junit.vintage</groupId>
          <artifactId>junit-vintage-engine</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.vaadin.external.google</groupId>
          <artifactId>android-json</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${version.maven.compiler.plugin}</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${version.spring.boot}</version>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${version.spring.boot}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>libs-release</id>
      <name>libs-release</name>
      <url>https://artifactory-prod.eanadev.org/artifactory/libs-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>libs-snapshot</id>
      <name>libs-snapshot</name>
      <url>https://artifactory-prod.eanadev.org/artifactory/libs-snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

</project>
